--- a/Innovzen/AndroidManifest.xml
+++ b/Innovzen/AndroidManifest.xml
@@ -19,11 +19,7 @@
         <activity
             android:name="com.innovzen.activities.ActivitySplashScreen"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            
         </activity>
 
         <!-- LOGIN -->
@@ -33,7 +29,7 @@
            
         </activity>
 
-        <!-- MAIN -->
+        <!-- MAIN -->ActivityTest
         <activity
             android:name="com.innovzen.activities.ActivityMain"
             android:label="@string/app_name" >
@@ -41,9 +37,13 @@
         </activity>
         <!-- test -->
         <activity
-            android:name="com.innovzen.activities.ActivityMain2"
+            android:name="com.innovzen.activities.ActivityTest"
             android:label="@string/app_name" >
-             
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
