--- a/Innovzen/project.properties
+++ b/Innovzen/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-14
 target=android-14
-android.library.reference.1=../JazzyViewPager
+android.library.reference.1=../MainActivity
