--- a/Innovzen/AndroidManifest.xml
+++ b/Innovzen/AndroidManifest.xml
@@ -19,7 +19,11 @@
         <activity
             android:name="com.innovzen.activities.ActivitySplashScreen"
             android:label="@string/app_name" >
-            
+               <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <!-- LOGIN -->
@@ -29,7 +33,7 @@
            
         </activity>
 
-        <!-- MAIN -->ActivityTest
+        <!-- MAIN -->
         <activity
             android:name="com.innovzen.activities.ActivityMain"
             android:label="@string/app_name" >
@@ -39,11 +43,7 @@
         <activity
             android:name="com.innovzen.activities.ActivityTest"
             android:label="@string/app_name" >
-             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+          
         </activity>
     </application>
 
