--- a/Innovzen/project.properties
+++ b/Innovzen/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-14
-target=android-14
-android.library.reference.1=../MainActivity
+target=android-19
+target=android-19
+android.library.reference.1=../JazzyViewPager
