--- a/Innovzen/project.properties
+++ b/Innovzen/project.properties
@@ -11,6 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:16
-target=Google Inc.:Google APIs:16
-android.library.reference.1=../JazzyViewPager
+target=android-16
+target=android-16
+android.library.reference.1=..\\JazzyViewPager
+android.library.reference.2=../DaoCore
