--- a/Innovzen/AndroidManifest.xml
+++ b/Innovzen/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />    
     <uses-permission android:name="android.permission.MOUNT_UMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:name="com.innovzen.application.InnovzenApplication"
